--- a/src/styles/inputTags.css
+++ b/src/styles/inputTags.css
@@ -19,12 +19,12 @@ div.ReactTags__tagInput input.ReactTags__tagInputField:focus {
     font-size: 14px;
     line-height: 1.42857143;
     color: #555;
-    background-color: #fff;
+    background-color: #eeeeee;
     background-image: none;
-    border: 1px solid #ccc;
+    border: 1px solid #eee;
     border-radius: 4px;
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgb(238, 238, 238);
     -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
     -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
     transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
@@ -75,3 +75,10 @@ div.ReactTags__suggestions ul li.ReactTags__activeSuggestion {
 span.tag-wrapper.ReactTags__tag {
     cursor: default!important;
 }
+.btn-default.active, .btn-default:active, .open>.dropdown-toggle.btn-default {
+    color: #337ab7;
+  }
+
+  .has-success .form-control {
+    border-color: #77d2a0a6;
+  }
